# calthing

./: .gitignore  CLAUDE.md  README.md  basic-sanitized.ics  main.py  pyproject.toml  test_main.py
